GapClose: fix/improve recursion, add symmetric versions, add figures

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -69,6 +69,11 @@ table {
   max-width: 35%;
 }
 
+.content figure.medium {
+  margin-right: max(-45% - 2rem, -50vw + 50% + 2rem);
+  max-width: 45%;
+}
+
 .content figure.large {
   margin-right: max(-60% - 2rem, -50vw + 50% + 2rem);
   max-width: 60%;
@@ -89,6 +94,13 @@ table {
     margin-left: auto;
     margin-right: auto;
     max-width: calc(0.35 * 860px);
+  }
+
+  .content figure.medium {
+    float: none;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: calc(0.45 * 860px);
   }
 
   .content figure.large {
